# cascade-email-rs

./: .gitignore  Cargo.toml  README.md  data.json  message.txt  receivers.xlsx
src/: excel2json.rs  mailer.rs  main.rs  utils.rs  xlsx.rs
